# T-Rex

./: .gitignore  README.md  __init__.py  extract_code_midtrain.sh  pyproject.toml  requirements.txt
config/: sft_qwen.yaml
dataset_quickstart/: README.md  pyproject.toml  quickstart.ipynb
dataset_quickstart/scripts/: replay.ipynb  visualize_episode.ipynb
dataset_quickstart/src/trex_dataset_quickstart/: __init__.py  decode.py  hub.py  robot.py  schema.py
diffusion/: __init__.py
experiments/: test_libero.sh
experiments/robot/: robot_utils.py
experiments/robot/libero/: run_libero_eval.py
hardware_code/: .gitignore  README.md  pyproject.toml  requirements.txt  setup.sh  teleop_launcher.sh
hardware_code/camera/: README.md  head_camera_receiver.py  stream_sender_dexmate.py  stream_sender_zed_box.py  view_head_camera.py  wrist_camera_receiver.py
hardware_code/config/: default.yaml
hardware_code/eval/: README.md  eval_trex_async.py
hardware_code/teleop/: arm_hand_control.py  config.py  data_writer.py  ik_utils.py  main_teleop.py  mock_teleop.py  replay_h5.py  reset_arm_to_init_pose.py  robot_descriptions.py  teleop_targets.py  visualize_data.py
hardware_code/vive_tracker/: .gitignore  README.md  base_streamer.py  client.py  null_driver_setup.md  requirements.txt  server.py  test_client.py  test_live_client.py  vive_streamer.py
janus/models/: DeformAE.py  modeling_vlm.py  processing_vlm.py
models/: __init__.py
qwen_vla/: __init__.py  diffusion.py  future_prediction.py  lerobot_dataset.py  modeling_qwen35_mot.py  modeling_qwen3vl_mot.py  modeling_vla.py  modeling_vla_35.py
scripts/: check_egodex_data.py  cluster_health_check.py  compare_params.py  eval_dexmot.py  extract_flow_tactile_proxy.py  launch_pretrain_ray.py  midtrain.py  midtrain.sh  precompute_fingertip_coords.py  precompute_fingertip_coords.sh  precompute_midtrain_stats.py  prepare_midtrain_merged.py  pretrain.py  pretrain.sh  pretrain_egodex.sh  pretrain_egodex_flare.sh  pretrain_egodex_ray.py  pretrain_egodex_ray.sh  pretrain_egodex_tactile_flare.sh  pretrain_mecka.sh  pretrain_mecka_flare.sh  probe_representations.py  probe_representations.sh  rebuild_mecka_merged.sh  replay_actions.py  replay_actions.sh  replay_json_client.py  replay_json_client.sh  run_flow_tactile_proxy.sh  smoke_test_paradigm_c.py  test.py  test.sh  test_janus_real.py  test_janus_real.sh  test_qwen35_offline.py  test_qwen35_offline.sh  test_qwen35_real.py  test_qwen35_real.sh  test_qwen3vl_flare_cfg_offline.py  test_qwen3vl_flare_cfg_offline.sh  (+39 more)
scripts/flow_tactile_vis/: contact_state.npz  tactile_proxy_metrics.npz
scripts/test_output_flare/: action_trajectory.npz  flare_similarity.npz
scripts/test_output_qwen35/: action_trajectory.npz
scripts/test_output_qwen3vl/: action_trajectory.npz
scripts/test_output_tac_aux/: action_trajectory.npz  contact_diagnostics.npz  force_diagnostics.npz  tflare_similarity.npz
scripts/test_output_tflare_gate/: action_trajectory.npz  gate_diagnostics.npz  tflare_similarity.npz
tactile_vqvae/: README.md  __init__.py  eval.py  extract_codes.py  train.py
tactile_vqvae/config/: vqvae_f6.yaml
tactile_vqvae/data/: __init__.py  dataset.py  stats.py
tactile_vqvae/models/: __init__.py  decoder.py  encoder.py  quantizer.py  tactile_vqvae.py
tactile_vqvae/scripts/: eval_vqvae_f6.sh  extract_codes.sh  inspect_exemplars.py  train_vqvae_f6.sh
utils/: analyze_episode.py  cal_noise.py  convert_egodex_to_lerobot.py  convert_egodex_to_lerobot.sh  convert_inlab_to_lerobot.py  convert_inlab_to_lerobot.sh  encode_vqvae_codes_to_json.py  encode_vqvae_codes_to_json.sh  gen_json_bimanual.sh  gen_json_tac_deltabase_eef_bimanual_parallel.py  gen_json_tac_deltabase_eef_down.py  gen_json_tac_deltabase_eef_down_parallel.py  gen_json_tac_deltabase_joint_down.py  gen_json_tac_deltacurr_eef_down.py  gen_json_tac_deltacurr_joint_down.py  lerobot_common.py  merge_vqvae_into_ckpt.py  merge_vqvae_into_ckpt.sh
